tests/miz/pass/types/pass_type_elaboration_chained_local_mode_reserved_variable_type_assertion_001.miz
definition
  mode BaseModeTypeAssertionDef: BaseModeTypeAssertion is set;
end;

definition
  mode ChainModeTypeAssertionDef: ChainModeTypeAssertion is BaseModeTypeAssertion;
end;

reserve x for ChainModeTypeAssertion;
theorem ChainedLocalModeReservedVariableTypeAssertionPayloadBoundary: x is set;
