tests/miz/fail/types/fail_type_elaboration_local_mode_attributed_rhs_expansion_gap_001.miz
definition
  let x be set;
  attr MarkedModeDef: x is marked means thesis;
end;

definition
  mode LocalModeDef: LocalMode is marked set;
end;

reserve z for LocalMode;
